# Test-RV32I-Mv

./: .gitignore  LICENSE  MyRv32I.drawio  README.md  build_frimware.sh  fpga-run.sh  genrtlsvg.py  run.sh  talk.md  talk.py  wave.sh
automation/fmax/: CMakeLists.txt  build.sh
automation/fmax/src/: main.cpp
docs/: data.js  index.html
firmware/: all.s  bootstrap.s  branch.s  linker.ld  main.c  test.s
rtl/: alu.sv  bios.sv  core.sv  decode.sv  decoder.sv  fetch.sv  mux_2.sv  ram.sv  regs.sv  rv32i.sv  types.svh
run/: main.cpp  uartsim.cpp
tb/: bios.py  ram.py
tmp/: main.hex  ram.json  rv32i.json
top/deo-nano/: Top.sv  io.sdc
